address warnings